New implementations added, mostly stream, lamda, binary I/O